# sbom

./: .gitignore  .pre-commit-config.yaml  COMPARISON.md  README.md  moon.mod.json
.github/workflows/: ci.yml  publish.yml
scripts/: compare.py  generate_readme.py  generate_report.sh  run_msbom.sh  run_our_tool.py  run_syft.sh
src/cmd/: main.mbt  moon.pkg
src/discovery/: discovery.mbt  moon.pkg  moon.pkg.json
src/formats/cyclonedx/: cyclonedx.mbt  moon.pkg  moon.pkg.json
src/formats/spdx/: moon.pkg  spdx.mbt
src/lib/: lib.mbt  moon.pkg  moon.pkg.json
src/types/: moon.pkg  moon.pkg.json  types.mbt
src/version/: version.mbt
tests/cargo/: cargo_test.mbt  moon.pkg
tests/fixtures/cargo/: Cargo.toml
tests/fixtures/go/: go.mod  go.sum
tests/fixtures/terraform/: .terraform.lock.hcl  main.tf
tests/go/: go_test.mbt  moon.pkg
tests/snapshots/cargo/: diff_cyclonedx.json  diff_spdx.json  msbom_spdx.json  our_cyclonedx.json  our_spdx.json  syft_cyclonedx.json  syft_spdx.json
tests/snapshots/go/: diff_cyclonedx.json  diff_spdx.json  msbom_spdx.json  our_cyclonedx.json  our_spdx.json  syft_cyclonedx.json  syft_spdx.json
tests/snapshots/terraform/: diff_cyclonedx.json  diff_spdx.json  msbom_spdx.json  our_cyclonedx.json  our_spdx.json  syft_cyclonedx.json  syft_spdx.json
tests/terraform/: moon.pkg  terraform_test.mbt
