[package]
name = "sample-app"
version = "0.3.0"
edition = "2021"
description = "A sample Rust application for SBOM testing"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
anyhow = "1.0.79"
log = "0.4.20"
env_logger = { version = "0.10.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.9.0"

[build-dependencies]
build-info-build = "0.0.35"
